--- a/emissions.html
+++ b/emissions.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
+  
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="open spaces.js"></script>
+  <script language="javascript" type="text/javascript" src="emissions.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <style>
