--- a/bike.html
+++ b/bike.html
@@ -5,31 +5,34 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/css">
-  <link rel="stylesheet" type="text/css" href="reset.css">
   <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@100;200;300;700&display=swap" rel="stylesheet">
-  
+  <title>anatomy of a bike crash</title>
+
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="bike.js"></script>
+  <script language="javascript" type="text/javascript" src="bikeC.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
 </head>
 
 <body>
+  <div class="container">
+    <header class="sticky-header">
+      <h1 style = 'color: white'>anatomy of a bike crash</h1>
+      <p>why do these things happen <br><br> these are crashes, or incidents, not accidents (preventable)
+      <br><br>scary moments <br><br> bike ordinance in 2019 <br><br> other safety measures</p>
+    </header> 
+    <main>
+      <div class="imagecontainer">
+      <img src = 'image/bike line.png' width = 100% alt="line chart">
+      </div>
+      <div class="p5-container" style="display: flex; justify-content: center; align-items: center;">
+        <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+        <script language="javascript" type="text/javascript" src="bikeC.js"></script>
+      </div>
+    </main>
 
-<h1 style = 'color: white; font-size:70px'>anatomy of a bike crash</h1>
-
-<div class="container">
-
-  <img src = 'image/line chart.png' width = 70% alt="line chart" style="border: 0;">
-</div>
-
-<div class="p5">
-  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="bike.js"></script>
   </div>
-</body>
-</html>
 
 </body>
 
