--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/css">
+    <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@100;200;300;700&display=swap" rel="stylesheet">
+    <title>open spaces</title>
 
-  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
-  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="openspaces.js"></script>
-
-  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-  </style>
+    <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+    <script language="javascript" type="text/javascript" src="openspaces.js"></script>
 </head>
 
 <body>
-Hello
+  <div class="container">
+      <h1 style = 'color: white'>anatomy of a bike crash</h1>
+<p>
+  floating circles 
+  <br>
+  mouse click = name of town
+  <br>
+  total area of space/total population
+  <br>
+  per capita green space
+  <br>
+  median income
+</p>
 </body>
 </html>
