--- a/open spaces.html
+++ b/open spaces.html
@@ -18,7 +18,17 @@
 </head>
 
 <body>
-Hello
+  floating circles 
+
+  mouse click = name of town
+  
+  total area of space
+  
+  total population
+  
+  per capita green space
+  
+  median income
 
 </body>
 
