--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/css">
-    <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@100;200;300;700&display=swap" rel="stylesheet">
-    <title>open spaces</title>
+  <link rel="stylesheet" href="style/css">
+  <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@100;200;300;700&display=swap" rel="stylesheet">
+  <title>open spaces</title>
 
-    <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-    <script language="javascript" type="text/javascript" src="openspaces.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="openspaces.js"></script>
 </head>
 
 <body>
-  <div class="container">
-      <h1 style = 'color: white'>anatomy of a bike crash</h1>
+  <div class="sketch-container">
+      <h1 style = 'color: white'>open spaces</h1>
 <p>
   floating circles 
   <br>
