--- a/bike.html
+++ b/bike.html
@@ -16,23 +16,25 @@
 </head>
 
 <body>
-  <div class="container">
+  <!-- <div class="container">
     <header class="sticky-header">
       <h1 style = 'color: white'>anatomy of a bike crash</h1>
       <p>why do these things happen <br><br> these are crashes, or incidents, not accidents (preventable)
       <br><br>scary moments <br><br> bike ordinance in 2019 <br><br> other safety measures</p>
-    </header> 
+    </header>  -->
     <main>
-      <div class="imagecontainer">
-      <img src = 'image/bike line.png' width = 100% alt="line chart">
+    <div class="imagecontainer">
+      <img src = 'image/bike landing page.png' width = 100% alt="title">
       </div>
-      <div class="p5-container" style="display: flex; justify-content: center; align-items: center;">
-        <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-        <script language="javascript" type="text/javascript" src="bikeC.js"></script>
-      </div>
+    <br><br> <br><br> <br><br> <br><br> <br><br> <br><br>
+    <div class="imagecontainer">
+      <img src = 'image/bike line.png' width = 70% alt="line chart">
+    </div>
     </main>
-
-  </div>
+    <div class="p5-container" style="display: flex; justify-content: center; align-items: center;">
+      <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+      <script language="javascript" type="text/javascript" src="bikeC.js"></script>
+    </div>
 
 </body>
 
