--- a/bike.html
+++ b/bike.html
@@ -12,7 +12,9 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="bikeC.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-
+  <style>
+    background-color:#000
+  </style>
 </head>
 
 <body>
