--- a/bike.html
+++ b/bike.html
@@ -12,7 +12,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="bikeC.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-  <body style = "background-color:#000;">
+  <body style="background-color: #000 !important;">
 </head>
 
 <body>
