--- a/bike.html
+++ b/bike.html
@@ -13,6 +13,8 @@
   <script language="javascript" type="text/javascript" src="bikeC.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
+  <body style="background-color: #000 !important;">
+
 </head>
 
 <body>
