--- a/bike.html
+++ b/bike.html
@@ -28,8 +28,8 @@
       <img src = 'image/bike landing page.png' width = 100% alt="title">
       </div>
     <br><br> <br><br> <br><br> <br><br> <br><br> <br><br>
-    <div class="imagecontainer">
-      <img src = 'image/bike line.png' width = 70% alt="line chart">
+    <div class="imagecontainer" style="justify-content: center; align-items: center;">
+      <img src = 'image/bike line.png' width = 100% alt="line chart">
     </div>
     </main>
     <div class="p5-container" style="display: flex; justify-content: center; align-items: center;">
