edits edits edits

--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
   <link rel="stylesheet" href="style/css">
   <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@100;200;300;700&display=swap" rel="stylesheet">
   <title>open spaces</title>
-
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="openspaces.js"></script>
 </head>
 
 <body>
-  <div class="sketch-container">
-      <h1 style = 'color: white'>open spaces</h1>
-<p>
-  floating circles 
-  <br>
-  mouse click = name of town
-  <br>
-  total area of space/total population
-  <br>
-  per capita green space
-  <br>
-  median income
-</p>
+  <div class="container">
+    <br><br><br><br><br><br>
+    <h1 style = 'color: white;'>the cost of <br>open space</h1>
+    <br><br><br><br>
+    <p>
+      I grew up in Shanghai, which (until recently) was known for its glittering skyline, mean taxi drivers (they can actually be quite kind and extremely funny), and its horrible air quality. <br><br>
+      In middle school, recess time and gym classes were often cancelled on days where the API score was deemed unsafe for outdoor activity. 
+      <br><br>
+      Access to outdoor space is a luxury — that is a fact that I think I am cognizant of perhaps more intimately than most. 
+      <br><br>
+      My project explores the acreages of open space in all 351 towns in the state of Massachusetts. Median income and population for each town in this visualization to provide crucial context for understanding this data.
+    </p>
+  </div>
 </body>
 </html>
