--- a/open spaces.html
+++ b/open spaces.html
@@ -6,18 +6,14 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="open spaces.js"></script>
+  <script language="javascript" type="text/javascript" src="openspaces.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-  </style>
 </head>
 
 <body>
+  <h1 style = 'color: white'>open spaces</h1>
+
   floating circles 
 
   mouse click = name of town
