--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
       I grew up in Shanghai, which (until recently) was known for its glittering skyline, mean taxi drivers (they can actually be quite kind and extremely funny), and its horrible air quality. <br><br>
       In middle school, recess time and gym classes were often cancelled on days where the AQI score was deemed unsafe for outdoor activity. 
       <br><br>
-      Access to outdoor space is a luxury — that is a fact that I think I am cognizant of perhaps more intimately than most. 
+      Access to outdoor space is a luxury — that is a fact that I am cognizant of perhaps more intimately than most. 
       <br><br>
-      My project explores the acreages of open space in all 351 towns in the state of Massachusetts. Median income and population for each town in this visualization to provide crucial context for understanding this data.
+      My project explores the acreages of open space in all 351 towns in the state of Massachusetts. Median income and population for each town in this visualization provide crucial context for understanding this data.
+      <br><br><br>
+      <b>Each circle represents one of 351 towns in Massachuetts. Hover over each circle to learn more about them. </b>
     </p>
   </div>
 </body>
