--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 style = 'color: white;'>the cost of <br>open space</h1>
     <br><br><br><br>
     <p>
-      I grew up in Shanghai, which (until recently) was known for its glittering skyline, mean taxi drivers (they can actually be quite kind and extremely funny), and its horrible air quality. <br><br>
+      I grew up in Shanghai, which (until recently) was known as a concrete jungle with mean taxi drivers (they can actually be quite kind and extremely funny) and horrible air quality. <br><br>
       In middle school, recess time and gym classes were often cancelled on days where the AQI score was deemed unsafe for outdoor activity. 
       <br><br>
       Access to outdoor space is a luxury — that is a fact that I am cognizant of perhaps more intimately than most. 
