--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class='container'>
     <br><br><br><br><br><br>
-    <h1 style = 'color: white;'>the cost of <br>open space</h1>
+    <h1> the cost of <br>open space</h1>
     <br><br><br><br>
     <p>
-      I grew up in Shanghai, which (until recently) was known as a concrete jungle with mean taxi drivers (they can actually be quite kind and extremely funny) and horrible air quality. <br><br>
-      In middle school, recess time and gym classes were often cancelled on days where the AQI score was deemed unsafe for outdoor activity. 
-      <br><br>
-      Access to outdoor space is a luxury — that is a fact that I am cognizant of perhaps more intimately than most. 
+      I grew up in Shanghai, which (until recently) was known as a concrete jungle with mean taxi drivers (they can actually be quite kind and extremely funny) and horrible air quality. In middle school, recess time and gym classes were often cancelled on days where the AQI score was deemed unsafe for outdoor activity. Access to outdoor space is a luxury — that is a fact that I am cognizant of perhaps more intimately than most. 
       <br><br>
       My project explores the acreages of open space in all 351 towns in the state of Massachusetts. Median income and population for each town in this visualization provide crucial context for understanding this data.
       <br><br><br>
