--- a/index.html
+++ b/index.html
@@ -19,32 +19,39 @@
 
     <!-- Content Container -->
     <div class="container" id="textContainer">
-      <br><br><br><br><br><br><br><br>
-      <br><br><br><br><br><br><br><br>
-      <br><br><br><br><br><br><br><br>      <br><br><br><br><br><br><br><br>
-      <br><br><br><br><br><br><br><br>
-
+      <p class = "exclude-box">
+        <br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br>
+      </p>
       <p>
         I grew up in Shanghai, which (until recently) was known as a concrete jungle with mean taxi drivers (they can
         actually be quite kind and extremely funny) and horrible air quality.
         In middle school, recess time and gym classes were often cancelled on days where the AQI score was deemed unsafe
         for outdoor activity.
         Access to outdoor space is a luxury — that is a fact that I am cognizant of perhaps more intimately than most.
+      </p>
+      <p class = "exclude-box">
         <br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br>
-
+      </p>
+      <p>
         My project explores the acreages of open space in all 351 towns in the state of Massachusetts. Median income and
         population for each town in this visualization provide crucial context for understanding this data.
-        <br><br><br><br><br><br><br><br>      <br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br>
-
-        <b>Each circle represents one of 351 towns in Massachusetts. Hover over each circle to learn more about them. </b>
-        <br><br><br><br><br><br><br><br>      <br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br>
-        <br><br>
-
       </p>
+      <p class = "exclude-box">
+        <br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br>
+      </p>
+      <p>
+        <b>Each circle represents one of 351 towns in Massachusetts. Hover over each circle to learn more about them. </b>
+      </p>
+      <p class = "exclude-box">
+
+        <br><br><br><br>
+        April Qian<br><br></p>
           <!-- p5.js Sketch -->
     <script src="openspaces.js"></script>
 
