--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <br><br><br><br><br><br><br><br>
       </p>
       <p>
-        I grew up in Shanghai, which (until recently) was known as a concrete jungle with mean taxi drivers (they can
-        actually be quite kind and extremely funny) and horrible air quality.
+        I grew up in Shanghai, which (until recently) was known as a concrete jungle with horrendous
+       traffic and equally terrible air quality.
         In middle school, recess time and gym classes were often cancelled on days where the AQI score was deemed unsafe
         for outdoor activity.
-        Access to outdoor space is a luxury — that is a fact that I am cognizant of perhaps more intimately than most.
+        Access to outdoor space is a luxury — a fact that I am cognizant of perhaps more intimately than many.
       </p>
       <p class = "exclude-box">
         <br><br><br><br><br><br><br><br>
