--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="sticky-header">
     <h1> the cost of <br>open space</h1>
-    <p> circle size and color intensity are directly proportional <br>to the total acres of open space in each town. </p>
+    <p> circle size and color intensity are directly proportional <br>to the total acres of open space in each town.<br><b>scroll down to see more! </b></p>
     <br><br><br><br><br><br><br><br>    <br><br><br><br><br><br><br><br>
     <button onclick="openPopup()">why open spaces?</button>
   </div>
