justify content removed, changed font size to proportion of vw

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
 </head>
 
+
 <body>
   <div class="sticky-header">
     <h1> the cost of <br>open space</h1>
     <p> circle size and color intensity are directly proportional <br>to the total acres of open space in each town.<br><b>scroll down to see more! </b></p>
     <br><br><br><br><br><br><br><br>    <br><br><br><br><br><br><br><br>
-    <button onclick="openPopup()">why open spaces?</button>
+    
+    <button onclick="openPopup()">WHY OPEN SPACES?</button>
+
   </div>
 
   <div class="parallax-container">
@@ -60,6 +63,7 @@
     window.onload = function() {
       openPopup();
     };
+
   </script>
 </body>
 </html>
